# construction_management_suite

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
construction_management_suite/: hooks.py  modules.txt  patches.txt  setup.py
construction_management_suite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
construction_management_suite/api/: boq.py
construction_management_suite/boq_management/doctype/boq/: boq.js  boq.json  boq.py
construction_management_suite/boq_management/doctype/boq_item/: boq_item.json  boq_item.py
construction_management_suite/boq_management/doctype/boq_revision/: boq_revision.py
construction_management_suite/config/: dashboards.py  desktop.py
construction_management_suite/fixtures/: cms_workspace.json
construction_management_suite/localization/india/: overrides.py
construction_management_suite/localization/ksa/: overrides.py
construction_management_suite/localization/pakistan/: overrides.py
construction_management_suite/localization/uae/: overrides.py
construction_management_suite/material_planning/: utils.py
construction_management_suite/patches/: fix_core_tables.py
construction_management_suite/progress_billing/: utils.py
construction_management_suite/project_costing/: utils.py
construction_management_suite/public/css/: cms.css
construction_management_suite/public/js/: cms.js
construction_management_suite/subcontractor_management/: utils.py
construction_management_suite/utils/: helpers.py  notifications.py  permissions.py
(+76 files in other folders)
